# telegram-bot-project

./: .gitignore  pyproject.toml
app/: __init__.py  main.py
app/database/: database.py  models.py  operations.py
app/handlers/: handlers.py
app/keyboards/: keyboards.py
app/utils/: newsletter.py
